--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Home Page</h1>
 		<p>
-			<a href="/login">Login</a> - <a href="/signup">Sign up</a> - <a href="/user">My page</a>
+			<a href="/login">Login</a> - <a href="/signup">Sign up</a> - <a href="/secret">My page</a>
 		</p>
 	</body>
 </html>
