Visualize error message for bad login and duplicate username when try to sign up

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,11 @@
 			<input type="password" placeholder="Password" name="password"/>
 			<button>Login</button>
 		</form>
-
+		<% if (typeof error != "undefined" && error) { %>
+			<p><%= error %></p>
+		<% } %>
+		<p>
+		<a href="/signup">Sign up</a> - <a href="/secret">My page</a>
+	</p>
 	</body>
 </html>
